Add opengraph meta and image

--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TeeView</title>
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://teeview.meeu.me/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TeeView" />
+    <meta property="og:description" content="Preview and download your Tee!" />
+    <meta property="og:image" content="https://teeview.meeu.me/opengraph.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="teeview.meeu.me" />
+    <meta property="twitter:url" content="https://teeview.meeu.me/" />
+    <meta name="twitter:title" content="TeeView" />
+    <meta name="twitter:description" content="Preview and download your Tee!" />
+    <meta name="twitter:image" content="https://teeview.meeu.me/opengraph.png" />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="TeeView" />
     <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
